RentalService works!